libgencmp (2.0) stable; urgency=medium

  * Include most features of CMP v2+

 -- David von Oheimb <David.von.Oheimb@siemens.com>  Thu, 12 Jan 2023 21:51:19 +0100

libgencmp (1.0) stable; urgency=medium

  * Initial release

 -- David von Oheimb <David.von.Oheimb@siemens.com>  Fri, 17 Sep 2021 11:41:32 +0200